# cognizantaimlapril2026-homeworkday1

./: README.md
healthcare_project/: pyproject.toml
healthcare_project/docs/source/: conf.py  index.rst
healthcare_project/healthcareenv/: pyvenv.cfg
healthcare_project/src/: app.py
healthcare_project/src/healthcare_project.egg-info/: PKG-INFO  SOURCES.txt
healthcare_project/src/models/: doctor.py  patient.py
healthcare_project/src/store/: healthcarestore.py
healthcare_project/src/view/: healthcareview.py
