#configuring toml
[project]
name = "healthcare-project"
version = "1.0.0"
description = "Console-based healthcare management system with documentation"
readme = "README.md"
authors = [
    {name="madhu",email="madhujainar@gmail.com"}
]
requires-python = ">=3.8"
#production dependencies
dependencies = [
    "faker>=13.3.4"
]

#developement dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=3.0.0",
    "black>=23.3.0",
    "isort>=5.0.0",
    "sphinx>=5.0.0"
]

[tool.black]
line-length = 88
target-version = ['py313']